# audio-antispoofing-thesis

./: .gitignore  README.md  main.py  pyproject.toml
configs/: schema_a.yaml  schema_b.yaml
experiments/schema_b/se_rawformer/: evaluation_results.json
scripts/: download_data.py  verify_gpu.py
src/: __init__.py  dataloader.py  evaluate.py  train.py  utils.py
src/models/: __init__.py  aasist.py  rawtfnet.py  se_rawformer.py
