[project]
name = "audio-antispoofing-thesis"
version = "0.1.0"
description = "Comparative study: SE-Rawformer vs RawTFNet vs AASIST for audio anti-spoofing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Thesis Author" }]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "kaggle>=1.6.0",
    "datasets>=2.18.0",
    "torchinfo>=1.8.0",
    # PyTorch nightly untuk support RTX 5070 (sm_120)
    "torch",
    "torchaudio",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "rich>=13.7.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

# PyTorch nightly untuk RTX 5070 (Blackwell sm_120)
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
