[project]
name = "audio-antispoofing-thesis"
version = "0.1.0"
description = "Comparative study: SE-Rawformer vs RawTFNet vs AASIST for audio anti-spoofing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Thesis Author" }]

dependencies = [
    # ── Audio Processing ──────────────────────────────────────────
    "torchaudio",                    # pin setelah uv sync pertama
    "librosa>=0.10.0",
    "soundfile>=0.12.0",

    # ── Scientific Computing ──────────────────────────────────────
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # ── Deep Learning Core ────────────────────────────────────────
    "torch",                         # pin setelah uv sync pertama
    "einops>=0.7.0",
    "torchinfo>=1.8.0",

    # ── Experiment Tracking ───────────────────────────────────────
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",

    # ── Data & Utils ──────────────────────────────────────────────
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # ── Dataset Download ──────────────────────────────────────────
    "kaggle>=1.6.0",                 # ASVspoof 2019 LA via Kaggle API
    "datasets>=2.18.0",              # In-the-Wild via HuggingFace
    "gdown>=5.1.0",                  # fallback Google Drive download
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "rich>=13.7.0",
    "ruff>=0.3.0",
]

# ── CATATAN: Pin torch setelah install pertama ────────────────────────
# Setelah `uv sync` berhasil, jalankan:
#   uv run python -c "import torch; print(torch.__version__)"
# Contoh output: 2.7.0.dev20260312+cu128
# Lalu update baris torch dan torchaudio di atas menjadi:
#   "torch==2.7.0.dev20260312",
#   "torchaudio==2.7.0.dev20260312",
# Kemudian push ke GitHub agar semua environment reproducible.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

# ── PyTorch Nightly: RTX 5070 Blackwell (sm_120) + CUDA 12.8 ─────────
# cu128 sesuai output nvidia-smi di PC kampus (CUDA Version: 12.8)
[[tool.uv.index]]
name = "pytorch-nightly"
url  = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch      = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }

# ── Ruff Linter ──────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]