[project]
name = "audio-antispoofing-thesis"
version = "0.1.0"
description = "Comparative study: SE-Rawformer vs RawTFNet vs AASIST for audio anti-spoofing"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Thesis Author" }]

# ─────────────────────────────────────────────────────────────────────
# Install manual dulu sebelum `pip install -e .`:
#
#   pip install torch torchaudio \
#     --index-url https://download.pytorch.org/whl/nightly/cu128 \
#     --pre
#
# Versi yang dipakai: torch==2.12.0.dev20260312+cu128
# GPU: NVIDIA RTX 5070 (Blackwell sm_120), CUDA 12.8
# ─────────────────────────────────────────────────────────────────────

dependencies = [
    # ── Audio ─────────────────────────────────────────────────────
    "librosa>=0.10.0",
    "soundfile>=0.12.0",

    # ── Scientific Computing ──────────────────────────────────────
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # ── Deep Learning Utils ───────────────────────────────────────
    "einops>=0.7.0",
    "torchinfo>=1.8.0",

    # ── Experiment Tracking ───────────────────────────────────────
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",

    # ── Config & Utils ────────────────────────────────────────────
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # ── Dataset Download ──────────────────────────────────────────
    "kaggle>=1.6.0",
    "datasets>=2.18.0",
    "gdown>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "rich>=13.7.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]